# aiio_assessment_task

./: docker-compose.yml  readme.md
backend/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml
backend/api/: urls.py
backend/api/catalogue/product/: Product.py  ProductSerializers.py  ProductView.py
backend/api/catalogue/saved_selection/: SavedSelection.py  SavedSelectionSerializers.py  SavedSelectionView.py
backend/api/catalogue/sub_category/: SubCategory.py  SubCategorySerializers.py  SubCategoryView.py
backend/api/catalogue/sub_product/: SubProduct.py  SubProductSerializers.py  SubProductView.py
backend/api/data/: products.json  subcategories.json  subproducts.json
backend/api/migrations/: 0001_initial.py  0002_auto_20240616_0218.py  0003_savedselection.py
backend/core/: .env  settings.py  urls.py
db/: .env
frontend/: .env  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/components/Catalogue/: Catalogue.tsx
frontend/src/components/Modal/: Modal.tsx
frontend/src/components/Product/: Product.tsx
frontend/src/components/SubCategory/: SubCategory.tsx
frontend/src/components/SubProduct/: SubProduct.tsx
frontend/src/core/: environment.ts
frontend/src/models/Product/: index.ts
frontend/src/services/: baseRoute.ts  index.ts  server.ts
frontend/src/store/: CatalogueStore.ts  index.ts
frontend/src/styles/: catalogue.ts  common.ts  index.ts  product.ts  subCategory.ts  subProduct.ts
(+2 files in other folders)
